# repol

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  test-pr-policy.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: policy-docker-ci.yml  policy-release.yml  pr-policy.yml  python-ci.yml
.repol/: deploy.yaml  pullrequest.yaml
cli/: README.md  pyproject.toml
cli/gitpoli_cli/: main.py
docs/: adr-initial-architecture.md  plan.md
infra/az-integration/: docker-compose.yml
infra/az-integration/scripts/: test.sh
infra/integration/: .env.example  README.md  docker-compose.yml
infra/integration/scripts/: check_app.py
infra/local/: README.md  docker-compose.yml
infra/server/: Dockerfile  requirements.txt
infra/server/app/: __init__.py  audit.py  config.py  github.py  helpers.py  opa.py
infra/server/app/routers/: audit_api.py  evaluate.py  health.py  webhook.py
infra/smee/: Dockerfile
policies/.regal/: regal.yaml
policies/lib/: helpers.rego
policies/tests/: fixtures.rego  pullrequest_test.rego
src/app/: __init__.py  audit.py  config.py  github.py  helpers.py  main.py  opa.py
src/app/adapters/: cosmos_audit_trail.py  env_config.py  sqlite_audit_trail.py
src/app/core/: config.py
src/app/routers/: audit_api.py  evaluate.py  health.py  webhook.py
tests/: conftest.py  test_audit_trail.py  test_handler_registry.py  test_policy_evaluator.py
