[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gitpoli"
version = "1.0.0"
description = "Policy-as-code for the GitHub SDLC — enforce deployment and PR rules with OPA"
authors = [{ name = "Erasmo Dominguez" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/erasmo-dominguez-stuff/gitpoli"
Issues = "https://github.com/erasmo-dominguez-stuff/gitpoli/issues"

[tool.hatch.build.targets.wheel]
packages = []